--- a/index.html
+++ b/index.html
@@ -1,12 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grafitti</title>
 </head>
 <body>
-    <h1>Hello World</h1>
+    <nav class="navbar bg-primary-subtle border-bottom border-body m-1" data-bs-theme="dark">
+        <nav class="navbar navbar-expand-lg bg-body-tertiary mx-auto p-2">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#">Grafitti</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0 grid gap-0 column-gap-lg-5">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">About</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Contact</a>
+                  </li>
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Dropdown
+                    </a>
+                    <ul class="dropdown-menu">
+                      <li><a class="dropdown-item" href="#">Gallery</a></li>
+                      <li><a class="dropdown-item" href="#">Artists</a></li>
+                      <li><hr class="dropdown-divider">Events</li>
+                      <li><a class="dropdown-item" href="#">Shop</a></li>
+                    </ul>
+                  </li>
+                  <li class="nav-item px-5">
+                    <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+                  </li>
+                </ul>
+                <form class="d-flex" role="search">
+                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                  <button class="btn btn-outline-success" type="submit">Search</button>
+                </form>
+              </div>
+            </div>
+          </nav>
+      </nav>
+       
     
+    <link rel="stylesheet" href="assets/js/bootstrap.bundle.min.js">
 </body>
 </html>
