--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Grafitti</title>
 </head>
 <body>
+    <!-- Navigation Bar Start -->
     <nav class="navbar bg-primary-subtle border-bottom border-body m-1" data-bs-theme="dark">
         <nav class="navbar navbar-expand-lg bg-body-tertiary mx-auto p-2">
             <div class="container-fluid">
@@ -48,6 +49,31 @@
             </div>
           </nav>
       </nav>
+      <!-- End of Navigation Bar -->
+
+      <!-- Carousel - Images sliding -->
+      <div id="carouselExampleRide" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="assets/images/1.jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="assets/images/2.jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="assets/images/3.jpg" class="d-block w-100" alt="...">
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleRide" data-bs-slide="Previous">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleRide" data-bs-slide="Next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+       <!-- End of carousel  -->
        
     
     <link rel="stylesheet" href="assets/js/bootstrap.bundle.min.js">
