--- a/index.html
+++ b/index.html
@@ -62,23 +62,26 @@
         <div class="carousel-inner">
           <div class="carousel-item active c-item">
             <img src="assets/images/1.jpg" class="d-block w-100 c-img" alt="Slide 1">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>First slide label</h5>
-              <p>Some representative placeholder content for the first slide.</p>
+            <div class="carousel-caption top-0 mt-4 d-none d-md-block">
+              <p class="mt-5 fs-3 text-uppercase">Explore the Streets in Color</p>
+              <h1 class="display-1 fw-bolder text-capitalize">The Spirit of Graffiti</h1>
+              <button class="btn btn-primary px-4 py-2 fs-5 mt-5">View</button>
             </div>
           </div>
           <div class="carousel-item c-item">
             <img src="assets/images/2.jpg" class="d-block w-100 c-img" alt="Slide 2">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Second slide label</h5>
-              <p>Some representative placeholder content for the first slide.</p>
+            <div class="carousel-caption top-0 mt-4 d-none d-md-block">
+              <p class="mt-5 fs-3 text-uppercase">Reveal the Hidden Graffiti Gems</p>
+              <h1 class="display-1 fw-bolder text-capitalize">The Vibe of Street Art</h1>
+              <button class="btn btn-primary px-4 py-2 fs-5 mt-5">View</button>
             </div>
           </div>
           <div class="carousel-item c-item">
             <img src="assets/images/3.jpg" class="d-block w-100 c-img" alt="Slide 3">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Third slide label</h5>
-              <p>Some representative placeholder content for the first slide.</p>
+            <div class="carousel-caption top-0 mt-4 d-none d-md-block">
+              <p class="mt-5 fs-3 text-uppercase">Find the Untold Stories in Graffiti</p>
+              <h1 class="display-1 fw-bolder text-capitalize">Soul of the Spray</h1>
+              <button class="btn btn-primary px-4 py-2 fs-5 mt-5">View</button>
             </div>
           </div>
         </div>
