--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <div class="carousel-caption top-0 mt-4">
               <p class="mt-5 fs-3 text-uppercase">Explore the Streets in Color</p>
               <h1 class="display-1 fw-bolder text-capitalize">The Spirit of Graffiti</h1>
-              <button class="btn btn-primary px-4 py-2 fs-5 mt-5">View</button>
+              <button class="btn btn-primary px-4 py-2 fs-5 mt-5">Explore Gallery</button>
             </div>
           </div>
           <div class="carousel-item c-item">
@@ -73,7 +73,7 @@
             <div class="carousel-caption top-0 mt-4">
               <p class="mt-5 fs-3 text-uppercase">Reveal the Hidden Graffiti Gems</p>
               <h1 class="display-1 fw-bolder text-capitalize">The Vibe of Street Art</h1>
-              <button class="btn btn-primary px-4 py-2 fs-5 mt-5">View</button>
+              <button class="btn btn-primary px-4 py-2 fs-5 mt-5">Explore Gallery</button>
             </div>
           </div>
           <div class="carousel-item c-item">
@@ -81,7 +81,7 @@
             <div class="carousel-caption top-0 mt-4">
               <p class="mt-5 fs-3 text-uppercase">Find the Untold Stories in Graffiti</p>
               <h1 class="display-1 fw-bolder text-capitalize">Soul of the Spray</h1>
-              <button class="btn btn-primary px-4 py-2 fs-5 mt-5">View</button>
+              <button class="btn btn-primary px-4 py-2 fs-5 mt-5">Explore Gallery</button>
             </div>
           </div>
         </div>
@@ -95,6 +95,64 @@
         </button>
       </div>
        <!-- End of carousel  -->
+
+       <!-- Start of section for Upcoming Events -->
+       <section class="upcoming-events text-center py-5">
+        <h2 class="fw-bold mb-5">Upcoming Events</h2>
+        <div class="container">
+            <div class="row g-4">
+                <!-- Event 1 -->
+                <div class="col-md-6">
+                    <div class="card mb-4 shadow-sm h-100">
+                        <div class="row g-0">
+                            <div class="col-4 d-flex align-items-center justify-content-center bg-danger text-white">
+                                <div class="text-center py-4">
+                                    <div class="day fs-1 fw-bold">24</div>
+                                    <div class="month text-uppercase">Oct</div>
+                                    <div class="year">2024</div>
+                                </div>
+                            </div>
+                            <div class="col-8">
+                                <div class="card-body">
+                                    <h3 class="card-title fw-bold">Urban Graffiti Expo</h3>
+                                    <p class="card-text">Join the biggest graffiti expo in the city featuring top street artists from around the world.</p>
+                                    <p><strong>Location:</strong> Downtown Art District</p>
+                                    <p><strong>Time:</strong> 10:00 AM - 6:00 PM</p>
+                                    <a href="#" class="btn btn-danger">Learn More</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Second Event -->
+                <div class="col-md-6">
+                    <div class="card mb-4 shadow-sm h-100">
+                        <div class="row g-0">
+                            <div class="col-4 d-flex align-items-center justify-content-center bg-warning text-dark">
+                                <div class="text-center py-4">
+                                    <div class="day fs-1 fw-bold">10</div>
+                                    <div class="month text-uppercase">Nov</div>
+                                    <div class="year">2024</div>
+                                </div>
+                            </div>
+                            <div class="col-8">
+                                <div class="card-body">
+                                    <h3 class="card-title fw-bold">Street Art Workshop</h3>
+                                    <p class="card-text">A hands-on graffiti workshop with renowned artist Wabuko Wabuko. Learn the basics of spray painting!</p>
+                                    <p><strong>Location:</strong> The Graffiti Hub</p>
+                                    <p><strong>Time:</strong> 12:00 PM - 4:00 PM</p>
+                                    <a href="#" class="btn btn-warning text-dark">Join Now</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>
+       <!-- End of Upcoming Events -->
        
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/js/bootstrap.bundle.min.js">
