Recent Art Uploads

--- a/index.html
+++ b/index.html
@@ -153,6 +153,44 @@
         </div>
     </section>
        <!-- End of Upcoming Events -->
+
+       <!-- Recent Art Uploads Section  -->
+       <div class="container mt-5">
+        <h2 class="text-center mb-4">Recent Art Uploads</h2>
+        <div class="row">
+            <div class="col-md-4">
+                <div class="card art-card">
+                    <img src="assets/images/graffiti-508272_640.jpg" class="card-img-top art-image" alt="Art 1">
+                    <div class="card-body">
+                        <h5 class="card-title">Female Empowerment</h5>
+                        <p class="card-text">The graffiti image features a woman with exaggerated features, a crown on her hair, and shopping bags, suggesting a connection to materialism or consumer culture.</p>
+                        <a href="#" class="btn btn-primary">View Details</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card art-card">
+                    <img src="assets/images/street-art-2692868_640.jpg" class="card-img-top art-image" alt="Art 2">
+                    <div class="card-body">
+                        <h5 class="card-title">Spirituality in African Art</h5>
+                        <p class="card-text">The image depicts a vibrant mural with a woman with flowing hair, a rooster, and geometric shapes.</p>
+                        <a href="#" class="btn btn-primary">View Details</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card art-card">
+                    <img src="assets/images/street-art-8696763_640.jpg" class="card-img-top art-image" alt="Art 3">
+                    <div class="card-body">
+                        <h5 class="card-title">Power of Urban Graffiti</h5>
+                        <p class="card-text">The graffiti image features a cartoonish character with exaggerated features, holding a spray paint can, and an aggressive expression, showcasing a dynamic and energetic tone.</p>
+                        <a href="#" class="btn btn-primary">View Details</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+       <!-- End of Recent Art Uploads -->
        
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/js/bootstrap.bundle.min.js">
