--- a/index.html
+++ b/index.html
@@ -191,6 +191,167 @@
         </div>
     </div>
        <!-- End of Recent Art Uploads -->
+
+       <!-- Artist Spotlight -->
+       <div class="container mt-5">
+        <h2 class="text-center mb-4">Artist Spotlight</h2>
+        <div class="row">
+            <div class="col-md-4">
+                <div class="card artist-card">
+                    <img src="assets/images/Evans.jpeg" class="card-img-top artist-image" alt="Artist 1">
+                    <div class="card-body">
+                        <h5 class="card-title">thee_UrbanKReative</h5>
+                        <p class="card-text">Muralist | Canvas Artist | Photographer | Spiritual | Storyteller</p>
+                        <a href="#" class="btn btn-primary">View Portfolio</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card artist-card">
+                    <img src="assets/images/Wabuko.png" class="card-img-top artist-image" alt="Artist 2">
+                    <div class="card-body">
+                        <h5 class="card-title">Wabuko Wabuko</h5>
+                        <p class="card-text">Software Developer. DS intermediate. ML intermediate. Python Guru. C sharp programmer.</p>
+                        <a href="https://wabukowabuko.github.io/" target="_blank" class="btn btn-primary">View Portfolio</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card artist-card">
+                    <img src="assets/images/Adams.jpeg" class="card-img-top artist-image" alt="Artist 3">
+                    <div class="card-body">
+                        <h5 class="card-title">Opicha</h5>
+                        <p class="card-text">Phadop</p>
+                        <a href="#" class="btn btn-primary">View Portfolio</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+        <!-- End of Artist Spotlight  -->
+
+        <!-- Community Section  -->
+        <div id="insights-carousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="5000">
+          <h2 class="text-center mb-4">Community Insights</h2>
+          <div class="carousel-indicators">
+              <button type="button" data-bs-target="#insights-carousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#insights-carousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#insights-carousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+              <button type="button" data-bs-target="#insights-carousel" data-bs-slide-to="3" aria-label="Slide 4"></button>
+              <button type="button" data-bs-target="#insights-carousel" data-bs-slide-to="4" aria-label="Slide 5"></button>
+          </div>
+          <div class="carousel-inner">
+              <div class="carousel-item active">
+                  <div class="d-flex flex-column align-items-center text-center">
+                      <div class="card">
+                          <div class="position-relative">
+                              <!-- <img src="https://via.placeholder.com/400x300" class="card-img-top" alt="Community Member 1"> -->
+                              <div class="reaction-buttons">
+                                  <button class="btn btn-danger btn-sm mx-1">❤️</button>
+                                  <button class="btn btn-warning btn-sm mx-1">⭐</button>
+                              </div>
+                          </div>
+                          <div class="card-body">
+                              <h5 class="card-title">John Doe</h5>
+                              <p class="card-text">"Your work has inspired me to express my creativity in ways I never thought possible!"</p>
+                              <div class="rating">
+                                  <strong>Rating:</strong> ★★★★☆
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+              <div class="carousel-item">
+                  <div class="d-flex flex-column align-items-center text-center">
+                      <div class="card">
+                          <div class="position-relative">
+                              <!-- <img src="https://via.placeholder.com/400x300" class="card-img-top" alt="Community Member 2"> -->
+                              <div class="reaction-buttons">
+                                  <button class="btn btn-danger btn-sm mx-1">❤️</button>
+                                  <button class="btn btn-warning btn-sm mx-1">⭐</button>
+                              </div>
+                          </div>
+                          <div class="card-body">
+                              <h5 class="card-title">Jane Smith</h5>
+                              <p class="card-text">"I love how your art brings our community together. It's truly impactful!"</p>
+                              <div class="rating">
+                                  <strong>Rating:</strong> ★★★★★
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+              <div class="carousel-item">
+                  <div class="d-flex flex-column align-items-center text-center">
+                      <div class="card">
+                          <div class="position-relative">
+                              <!-- <img src="https://via.placeholder.com/400x300" class="card-img-top" alt="Community Member 3"> -->
+                              <div class="reaction-buttons">
+                                  <button class="btn btn-danger btn-sm mx-1">❤️</button>
+                                  <button class="btn btn-warning btn-sm mx-1">⭐</button>
+                              </div>
+                          </div>
+                          <div class="card-body">
+                              <h5 class="card-title">Emily Johnson</h5>
+                              <p class="card-text">"Your workshops have helped me grow as an artist. Thank you for sharing your knowledge!"</p>
+                              <div class="rating">
+                                  <strong>Rating:</strong> ★★★★☆
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+              <div class="carousel-item">
+                  <div class="d-flex flex-column align-items-center text-center">
+                      <div class="card">
+                          <div class="position-relative">
+                              <!-- <img src="https://via.placeholder.com/400x300" class="card-img-top" alt="Community Member 4"> -->
+                              <div class="reaction-buttons">
+                                  <button class="btn btn-danger btn-sm mx-1">❤️</button>
+                                  <button class="btn btn-warning btn-sm mx-1">⭐</button>
+                              </div>
+                          </div>
+                          <div class="card-body">
+                              <h5 class="card-title">Michael Brown</h5>
+                              <p class="card-text">"I appreciate how you engage with the community through art. It's refreshing!"</p>
+                              <div class="rating">
+                                  <strong>Rating:</strong> ★★★★★
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+              <div class="carousel-item">
+                  <div class="d-flex flex-column align-items-center text-center">
+                      <div class="card">
+                          <div class="position-relative">
+                              <!-- <img src="https://via.placeholder.com/400x300" class="card-img-top" alt="Community Member 5"> -->
+                              <div class="reaction-buttons">
+                                  <button class="btn btn-danger btn-sm mx-1">❤️</button>
+                                  <button class="btn btn-warning btn-sm mx-1">⭐</button>
+                              </div>
+                          </div>
+                          <div class="card-body">
+                              <h5 class="card-title">Sarah Davis</h5>
+                              <p class="card-text">"Your art speaks volumes. It captures the essence of our culture beautifully!"</p>
+                              <div class="rating">
+                                  <strong>Rating:</strong> ★★★★☆
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#insights-carousel" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#insights-carousel" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+          </button>
+      </div>
+         <!-- End of Community Section  -->
        
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/js/bootstrap.bundle.min.js">
