--- a/index.html
+++ b/index.html
@@ -352,6 +352,45 @@
           </button>
       </div>
          <!-- End of Community Section  -->
+
+         <!-- Social Media Links  -->
+         <div class="container text-center mt-5">
+          <h1 class="mb-4">Connect with Us</h1>
+          <p class="lead mb-5">Follow us on our social media platforms:</p>
+          <div class="row">
+              <div class="col-md-4 mb-4">
+                  <a href="https://www.facebook.com" target="_blank" class="btn btn-primary btn-lg btn-block">
+                      <i class="fab fa-facebook-f"></i> Facebook
+                  </a>
+              </div>
+              <div class="col-md-4 mb-4">
+                  <a href="https://www.twitter.com" target="_blank" class="btn btn-info btn-lg btn-block">
+                      <i class="fab fa-twitter"></i> Twitter
+                  </a>
+              </div>
+              <div class="col-md-4 mb-4">
+                  <a href="https://www.instagram.com" target="_blank" class="btn btn-danger btn-lg btn-block">
+                      <i class="fab fa-instagram"></i> Instagram
+                  </a>
+              </div>
+              <div class="col-md-4 mb-4">
+                  <a href="https://www.linkedin.com" target="_blank" class="btn btn-secondary btn-lg btn-block">
+                      <i class="fab fa-linkedin-in"></i> LinkedIn
+                  </a>
+              </div>
+              <div class="col-md-4 mb-4">
+                  <a href="https://www.youtube.com" target="_blank" class="btn btn-danger btn-lg btn-block">
+                      <i class="fab fa-youtube"></i> YouTube
+                  </a>
+              </div>
+              <div class="col-md-4 mb-4">
+                  <a href="https://www.pinterest.com" target="_blank" class="btn btn-danger btn-lg btn-block">
+                      <i class="fab fa-pinterest"></i> Pinterest
+                  </a>
+              </div>
+          </div>
+      </div>
+          <!-- End of Social Media Links  -->
        
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/js/bootstrap.bundle.min.js">
