--- a/index.html
+++ b/index.html
@@ -391,6 +391,69 @@
           </div>
       </div>
           <!-- End of Social Media Links  -->
+
+          <!-- Footer -->
+    <footer class="bg-dark text-light pt-5">
+        <div class="container">
+            <div class="row">
+                <!-- About Section -->
+                <div class="col-md-4 mb-4">
+                    <h5 class="text-uppercase">About Us</h5>
+                    <p>Our platform celebrates street culture, featuring emerging and established graffiti artists from around the world. Join us as we explore urban art in vibrant colors and bold statements.</p>
+                </div>
+
+                <!-- Explore Section -->
+                <div class="col-md-4 mb-4">
+                    <h5 class="text-uppercase">Explore More</h5>
+                    <ul class="list-unstyled">
+                        <li><a href="#" class="text-light">Featured Artists</a></li>
+                        <li><a href="#" class="text-light">Street Galleries</a></li>
+                        <li><a href="#" class="text-light">Events</a></li>
+                        <li><a href="#" class="text-light">Submit Your Art</a></li>
+                    </ul>
+                </div>
+
+                <!-- Contact Info Section -->
+                <div class="col-md-4 mb-4">
+                    <h5 class="text-uppercase">Contact Us</h5>
+                    <p><i class="fas fa-envelope"></i> thee_UrbanKreative@artworld.com</p>
+                    <p><i class="fas fa-map-marker-alt"></i> 45 Urban Walls, Allsops, Nairobi</p>
+                    <p><i class="fas fa-phone-alt"></i> +254123456789</p>
+                </div>
+            </div>
+
+            <!-- Social Media Links -->
+            <div class="row mt-4">
+                <div class="col-md-12 text-center">
+                    <h5 class="text-uppercase">Connect with Us</h5>
+                    <a href="https://www.facebook.com" target="_blank" class="text-light mx-2">
+                        <i class="fab fa-facebook-f"></i>
+                    </a>
+                    <a href="https://www.twitter.com" target="_blank" class="text-light mx-2">
+                        <i class="fab fa-twitter"></i>
+                    </a>
+                    <a href="https://www.instagram.com" target="_blank" class="text-light mx-2">
+                        <i class="fab fa-instagram"></i>
+                    </a>
+                    <a href="https://www.linkedin.com" target="_blank" class="text-light mx-2">
+                        <i class="fab fa-linkedin"></i>
+                    </a>
+                    <a href="https://www.youtube.com" target="_blank" class="text-light mx-2">
+                        <i class="fab fa-youtube"></i>
+                    </a>
+                </div>
+            </div>
+
+            <!-- Copyright Section -->
+            <div class="row mt-4">
+                <div class="col-md-12 text-center">
+                    <p class="mb-0">&copy; 2024 thee_UrbanKreative. All Rights Reserved. Creativity Unleashed.</p>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+    <!-- End of Footer  -->
        
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/js/bootstrap.bundle.min.js">
