Reshuffle of Contact Us page

--- a/index.html
+++ b/index.html
@@ -353,45 +353,6 @@
       </div>
          <!-- End of Community Section  -->
 
-         <!-- Social Media Links  -->
-         <div class="container text-center mt-5">
-          <h1 class="mb-4">Connect with Us</h1>
-          <p class="lead mb-5">Follow us on our social media platforms:</p>
-          <div class="row">
-              <div class="col-md-4 mb-4">
-                  <a href="https://www.facebook.com" target="_blank" class="btn btn-primary btn-lg btn-block">
-                      <i class="fab fa-facebook-f"></i> Facebook
-                  </a>
-              </div>
-              <div class="col-md-4 mb-4">
-                  <a href="https://www.twitter.com" target="_blank" class="btn btn-info btn-lg btn-block">
-                      <i class="fab fa-twitter"></i> Twitter
-                  </a>
-              </div>
-              <div class="col-md-4 mb-4">
-                  <a href="https://www.instagram.com" target="_blank" class="btn btn-danger btn-lg btn-block">
-                      <i class="fab fa-instagram"></i> Instagram
-                  </a>
-              </div>
-              <div class="col-md-4 mb-4">
-                  <a href="https://www.linkedin.com" target="_blank" class="btn btn-secondary btn-lg btn-block">
-                      <i class="fab fa-linkedin-in"></i> LinkedIn
-                  </a>
-              </div>
-              <div class="col-md-4 mb-4">
-                  <a href="https://www.youtube.com" target="_blank" class="btn btn-danger btn-lg btn-block">
-                      <i class="fab fa-youtube"></i> YouTube
-                  </a>
-              </div>
-              <div class="col-md-4 mb-4">
-                  <a href="https://www.pinterest.com" target="_blank" class="btn btn-danger btn-lg btn-block">
-                      <i class="fab fa-pinterest"></i> Pinterest
-                  </a>
-              </div>
-          </div>
-      </div>
-          <!-- End of Social Media Links  -->
-
           <!-- Footer -->
     <footer class="bg-dark text-light pt-5">
         <div class="container">
@@ -427,19 +388,22 @@
                 <div class="col-md-12 text-center">
                     <h5 class="text-uppercase">Connect with Us</h5>
                     <a href="https://www.facebook.com" target="_blank" class="text-light mx-2">
-                        <i class="fab fa-facebook-f"></i>
+                        <i class="fab fa-facebook-f">Facebook</i>
                     </a>
                     <a href="https://www.twitter.com" target="_blank" class="text-light mx-2">
-                        <i class="fab fa-twitter"></i>
+                        <i class="fab fa-twitter">X</i>
                     </a>
                     <a href="https://www.instagram.com" target="_blank" class="text-light mx-2">
-                        <i class="fab fa-instagram"></i>
+                        <i class="fab fa-instagram">Instagram</i>
                     </a>
                     <a href="https://www.linkedin.com" target="_blank" class="text-light mx-2">
-                        <i class="fab fa-linkedin"></i>
+                        <i class="fab fa-linkedin">LinkedIn</i>
                     </a>
                     <a href="https://www.youtube.com" target="_blank" class="text-light mx-2">
-                        <i class="fab fa-youtube"></i>
+                        <i class="fab fa-youtube">YouTube</i>
+                    </a>
+                    <a href="https://www.youtube.com" target="_blank" class="text-light mx-2">
+                        <i class="fab fa-pinterest">Pinterest</i>
                     </a>
                 </div>
             </div>
